fixing atomic css spacing 0 to 200px step 10

--- a/src/styles/_atomic.scss
+++ b/src/styles/_atomic.scss
@@ -22,7 +22,7 @@ $spacing-props: (
 
 @each $prefix, $property in $spacing-props {
   @for $i from 0 through 20 {
-    $val: $i * 5;
+    $val: $i * 10;
     .#{$prefix}_#{$val} { #{$property}: #{$val}px; }
   }
 }
